# data-engineering-local

./: .gitignore  LICENSE  Makefile  README.md  functions.sh  main.sh
airflow/: docker-compose.yaml
dagster/: Dockerfile_dagster  Dockerfile_user_code  docker-compose.yaml
druid/: docker-compose.yaml
jupyter/: Dockerfile  docker-compose.yaml  entrypoint.sh  pyproject.toml
jupyter-local/: docker-compose.yaml  pyproject.toml
kafka/: docker-compose.yaml
metabase/: docker-compose.yaml
minio/: docker-compose.yaml
mongodb/: docker-compose.yaml
mysql/: docker-compose.yaml
nifi/: Dockerfile  docker-compose.yaml
notebooks/: eda_connect_minio.ipynb
postgresql/: docker-compose.yaml
prefect/: docker-compose.yaml
presto/: docker-compose.yaml
trino/: docker-compose.yaml
